--- a/config.json
+++ b/config.json
@@ -14,6 +14,16 @@
           }
         }
       ]
+    },
+    "react-native": {
+      "transformGroup": "react-native",
+      "buildPath": "./build/",
+      "files": [
+        {
+          "destination": "themes.ts",
+          "format": "javascript/es6"
+        }
+      ]
     }
   }
 }
